style: more attempts at overflow fixes

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -5,8 +5,6 @@
 
 html {
     position: relative;
-    max-height: 100%;
-    max-width: 100vw;
 }
 
 // default body styles
@@ -28,11 +26,11 @@ body {
         position: absolute;
         top: 50px;
         left: 0;
-        max-height: 100%;
-        max-width: 100vw;
 
         &.nav-open {
             overflow: hidden;
+            height: 100vh;
+            width: 100vw;
         }
     }
 }
